testing flex box

--- a/web/corpus.xhtml
+++ b/web/corpus.xhtml
@@ -4,6 +4,7 @@
       <title>Psalms and Revelations</title>
    </head>
    <body><!--#include virtual="menu.xhtml"-->
+      <section class="readingView">
       <section class="sidebar">
          <div class="text">
             <p> Not sure where to start? You can explore the corpus by clicking on any
@@ -5199,5 +5200,6 @@
                   		</p>
             </div>
          </div>
-      </div><script src="filter.js"></script></body>
+      </div><script src="filter.js"></script>
+   </section></body>
 </html>
