--- a/web/corpus.xhtml
+++ b/web/corpus.xhtml
@@ -4,6 +4,7 @@
       <title>Psalms and Revelations</title>
    </head>
    <body><!--#include virtual="menu.xhtml"-->
+      <div class="readingView">
       <section class="sidebar">
          <div class="text">
             <p> Not sure where to start? You can explore the corpus by clicking on any
@@ -5200,5 +5201,6 @@
             </div>
          </div>
       </div><script src="filter.js"></script>
+      </div>
    </body>
 </html>
