SVG changes and added analysis of the data

--- a/web/analysis.xhtml
+++ b/web/analysis.xhtml
@@ -68,8 +68,11 @@
                <td>427</td>
             </tr>
          </table>
+              <p>We were expecting there to be a high number count for each emotion and tone in Psalms. 
+                      The Psalms have 150 chapters, as opposed to Revelations' 21 chapters. We looked less at the specific number count and more at which emotions and tones occured most frequently.
+              We were suprised to see that joy was the most common emotion by a wide margin withanger coming in at nearly half the frequency. Praise was a highly used tone within the book, as well.</p>
          <h1>Revelations</h1>
-         <table>
+         <table>                 
             <tr>
                <th>Emotions</th>
                <th>Count</th>
@@ -131,9 +134,11 @@
                <td>30</td>
             </tr>
          </table>
-         <svg xmlns="http://www.w3.org/2000/svg"
-     viewBox="75 100 1000 1000"
-     width="100%">
+         <p>For Revelations, we had been expecting anger to be the most commonly occuring emotion in the book, and that ended up being the case. However, we were suprised that mentions of joy came to only half the frequency as anger.
+         Still, despite the nature of the text, fear wasn't used frequently as an emotion or a tone. We had also been expecting a lower number count for each emotion and tone, due to the book's size, but not quite to the degree that we got.</p>
+              <svg xmlns="http://www.w3.org/2000/svg"
+     viewBox="0 100 1000 1000"
+     width="90%">
    <g transform="translate(100, 1000)">
       <line x1="50" x2="900" y1="0" y2="0" stroke="black"/>
       <line x1="50" x2="50" y1="0" y2="-550" stroke="black"/>
@@ -486,9 +491,11 @@
       <text x="850" y="-495" text-anchor="middle" stroke="black">5</text>
    </g>
 </svg>
+              <p>Looking at the intersection of emotions and tones for each book was an interesting exercise. 
+                      A lot of overlaps we had begun to notice when marking our work for analysis, but there were a few intersections that surpised us, such as fear and joy and fear and contentment. </p>
          <svg xmlns="http://www.w3.org/2000/svg"
-            viewBox="75 100 1000 1000"
-            width="100%">
+            viewBox="0 100 1000 1000"
+            width="90%">
             <g transform="translate(100, 1000)">
                <line x1="50" x2="900" y1="0" y2="0" stroke="black"/>
                <line x1="50" x2="50" y1="0" y2="-550" stroke="black"/>
@@ -757,11 +764,11 @@
                <text x="850" y="-195" text-anchor="middle" stroke="black">3</text>
             </g>
          </svg>
-         
+         <p>For Revelations, it was interesting to see that the overlap between emotions and tones was kept to only a few instances, the majority of the overlap falling into a few areas.</p>
 
          <svg xmlns="http://www.w3.org/2000/svg"
-     viewBox="75 100 1000 1000"
-     width="100%">
+     viewBox="0 100 1000 1000"
+     width="90%">
    <g transform="translate(100, 1000)">
       <line x1="50" x2="900" y1="0" y2="0" stroke="black"/>
       <line x1="50" x2="50" y1="0" y2="-550" stroke="black"/>
@@ -1114,6 +1121,7 @@
       <text x="850" y="-495" text-anchor="middle" stroke="black">5</text>
    </g>
 </svg>
+              <p>The intersection of both texts wasn't greatly influenced by the data from Revelations, and so much of the analysis ended up being geared towards the Psalms.</p>
 
       </div>
    </body>
