Adding the conclusions page with text

--- a/web/conclusion.xhtml
+++ b/web/conclusion.xhtml
@@ -9,22 +9,29 @@
         <!--#include virtual="menu.xhtml" -->
         <div id="conclusion" class="closed">
             <h1>Conclusion</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi unde
-                earum nisi quibusdam minima consequuntur qui! Quisquam vero ut
-                reprehenderit quo mollitia delectus aliquam aperiam illo quod
-                architecto? Soluta omnis culpa alias deserunt laborum atque ullam aut
-                architecto eius nostrum minima repellat autem dolor amet similique sit
-                vitae impedit reiciendis rem odit tempora ex quasi veniam tempore quod
-                expedita iusto a sequi nihil iste molestias dolore quibusdam distinctio
-                vel dolorum obcaecati facere itaque laudantium ducimus incidunt magnam
-                laboriosam nisi quisquam earum quidem quam. Assumenda alias quaerat
-                velit quidem similique deleniti vitae et possimus quasi ex incidunt
-                fugit sequi iure doloribus rerum ipsa enim ipsam saepe architecto ut.
-                Laudantium corporis cum iure culpa mollitia fuga magnam omnis
-                voluptatibus suscipit provident in dolore laborum expedita quasi ullam
-                officiis distinctio vel voluptatum inventore iusto perferendis ipsa
-                facere accusamus rem eum id voluptate obcaecati! Quos quisquam explicabo
-                voluptatibus modi illum fugiat laboriosam magni reprehenderit.</p>
+            <p>Once we marked up the entirety of Psalms and Revelations and conducted our analysis,
+                we were able to come to a number of conclusions regarding our research. Our original
+                research questions: what is the emotional tone and language of the book of Psalms
+                and the book of Revelations? And, is there any variation from the Old Testament to
+                the New Testament? were both answered, and we also found some surprising occurences
+                of overlaps between tones and emotions that we were not expecting.</p>
+
+            <p>For Psalms, the emotion and tone intersections were much higher than that of
+                Revelations, supporting the debate that the Old Testament tends to be more emotive
+                than the New Testament. Revelations tended to have a much smaller count overall,
+                again supporting the debate of Old versus New Testaments. As a whole, a few of the
+                overlaps that we found surprising in the range of tones and emotions were between
+                joy and violence, coming in with a count of 154 instances in Psalms, and 75
+                instances in Revelations, making for the highest overlap of tone and emotion in the
+                whole book. In the same manner, joy and righteousness came in with a surprising
+                count of 208 in Psalms. On the lower side of the spectrum, but still surprising, we
+                found that the emotion of fear only overlapped with the tone of fear once, and the
+                tone of anxiety twice.</p>
+                
+                <p>While those counts did surprise us, there were a few counts
+                we were expecting. Praise and joy showed up the most in Psalms with an overall count
+                of 701 instances. Righteousness and anger overlapped in Psalms 318 times, making it
+                the second largest count following joy and praise.</p>
         </div>
     </body>
 </html>
