Last sentence on the conclusion page accidentally got cut so it is added here

--- a/web/conclusion.xhtml
+++ b/web/conclusion.xhtml
@@ -27,11 +27,13 @@
                 count of 208 in Psalms. On the lower side of the spectrum, but still surprising, we
                 found that the emotion of fear only overlapped with the tone of fear once, and the
                 tone of anxiety twice.</p>
-                
-                <p>While those counts did surprise us, there were a few counts
-                we were expecting. Praise and joy showed up the most in Psalms with an overall count
-                of 701 instances. Righteousness and anger overlapped in Psalms 318 times, making it
-                the second largest count following joy and praise.</p>
+
+            <p>While those counts did surprise us, there were a few counts we were expecting. Praise
+                and joy showed up the most in Psalms with an overall count of 701 instances.
+                Righteousness and anger overlapped in Psalms 318 times, making it the second largest
+                count following joy and praise. These overlaps were ones that we had expected to see
+                in correlation with each other, and they support the findings of our research as a
+                whole.</p>
         </div>
     </body>
 </html>
